--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* #app-container > *:not(canvas) {
+	pointer-events: inherit;
+} */
